Version 0.2.2 - UNRELEASED
 * fixed broken commandline parameter "--template"
 * added workaround for ODE collision detection, that is broken under specific circumstances
 * fixed "division by zero" error in non-ODE mode

Version 0.2.1 - 2010-03-09
 * fixed code that depended on GTK 2.16 (instead of 2.12)
 * view settings "light", "shadow" and "polygon fill" are now configurable
 * documented version problems with Debian "Lenny" and Ubuntu (before "Karmic")

Version 0.2 - 2010-03-04
 * added an alternative GTK interface with additional features:
  * configurable 3D view settings: model / toolpath / axis / drill progress / frame rate / colors
  * manipulation of the model: rotation, flip, swap, scale, move
  * saving the model to an ascii STL file
  * load/save processing settings from/to a file
  * handling of multiple processing templates (e.g. "Rough", "Semi-finish" and "Finish")
  * configure "material allowance" for a minimum distance between drill and model
  * configure the "safety height" for the machine
  * allow to manage and export (gcode) multiple toolpaths at once
  * based on GtkGlExt (for OpenGL)
  * visualize invalid processing setting combinations
  * configure "overlap" instead of "lines" and "samples"
  * configure "maximum step down" instead of "layers"
  * show a progress bar during calculations
  * basic lightning for the OpenGL view
 * improved performance by (optionally) using the "Open Dynamics Engine" (ODE) for
   collision detection

Version 0.1.11b - 2010-02-25
 * fix minor release mistake (missing "STLExporter")

Version 0.1.11 - 2010-02-19
 * fix detection of binary STL
 * added Simulation mode
 * ignore invalid triangles (caused by high-resolotion models)
 * automatic boundary fits to the model
 * add ubuntu specific note
 * code cleanups

Version 0.1.10 - 2009-07-13
 * support binary STL
 * close contours

Version 0.1.9 - 2009-06-18
 * linux compatibility
 * integrated kdtree
 * fix speedup shortcuts

Version 0.1.8 - 2009-04-14