@@ -2,6 +2,7 @@ Version 0.2.2 - UNRELEASED
  * fixed broken commandline parameter "--template"
  * added workaround for ODE collision detection, that is broken under specific circumstances
  * fixed "division by zero" error in non-ODE mode
+ * allow to disable ODE via commandline option
 
 Version 0.2.1 - 2010-03-09
  * fixed code that depended on GTK 2.16 (instead of 2.12)
